fix: fix firefox h3 overlapping dropdown

--- a/.storybook/preview.scss
+++ b/.storybook/preview.scss
@@ -39,6 +39,7 @@ h1.sbdocs-h1 {
 }
 
 .sbdocs h3 {
+  position: static;
   font-size: 1rem;
   margin-top: 3em;
   line-height: 1.2em;
